--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div id="lead-content">
             <h1>Balkrishna Atmaram Londhe</h1>
             <h2><b>DevOps Engineer</b></h2>
-            <h3><b>Senior Engineer - Cloud Services and Software</b></h3>
+            <h2><b>Senior Engineer - Cloud Services and Software</b></h2>
             <a href="images/Balkrishna_Londhe_DevOps_Engineer.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -102,9 +102,12 @@
                         <li>Responsible for designing and implementing end-to-end automated delivery for multiple applications</li>
                         <li>Supporting client environments for deployment and monitoring environments both production and non-production</li>
                         <li>Wrote Infrastructure as a Code using Terraform</li>
+                        <li>Managed and updated complete infrastructure using Terraform</li>
+                        <li>Wrote own modules for ECS and S3 buckets</li>
                         <li>Worked on tools like – Jenkins, Grafana, GitHub, Linear, Pritunl, Notion, Graylog, Nexus3, OTS, and AWS Services</li>
                         <li>Deployment and Management of applications on AWS services and EKS cluster</li>
-                    <b>Skills:</b> Notion · DevOps · Amazon Web Services (AWS) · Kubernetes · Configuration Management · Shell Scripting · Jenkins · Docker · Linux · Bash · Git · GitHub · AWS Lambda · Terraform · Continuous Integration and Continuous Delivery (CI/CD)
+                        <li>Managed different teams deployments on various environments</li>
+                    <b>Skills:</b> Notion, DevOps, Amazon Web Services (AWS), Kubernetes, Configuration Management, Shell Scripting, Jenkins, Docker, Linux, Bash, Git, GitHub, AWS Lambda, Terraform, Continuous Integration and Continuous Delivery (CI/CD)
                 <!-- </p> -->
             </div>
             <div data-date="April 2018 – December 2021">
@@ -134,7 +137,7 @@
                         <li>Managing containers using Orchestration tools like Kubernetes. Having a good understanding of Container Log and Management, Networking. Good Understanding of Docker file and its components, written some of the Docker files for Developing Images</li>
                         <li>Good understanding of Kubernetes manager components like API Server, etc, Scheduler, Kubernetes Controller and Kubernetes Node components like Kube Proxy, POD, Kubelet, Replication Groups, and POD Controller and Good understanding of Kubernetes Networks like Ingres and NodePort</li>
                         <li>Setting Grafana dashboard using InfluxDB and Telegraph which will monitor over 50+ VM’s to check health status of new & existing infrastructure.</li>
-                    <b>Skills: </b> DevOps · Amazon Web Services (AWS) · Kubernetes · Configuration Management · Agile Project Management · Agile Methodologies · Shell Scripting · Jenkins · Docker · Ubuntu · JIRA · Linux · Bash · Git · GitHub · AWS Lambda · Gitlab · Ansible · Continuous Integration and Continuous Delivery (CI/CD) · Confluence · CI · Artifactory
+                    <b>Skills: </b> DevOps, Amazon Web Services (AWS), Kubernetes, Configuration Management, Agile Project Management, Agile Methodologies, Shell Scripting, Jenkins, Docker, Ubuntu, JIRA, Linux, Bash, Git, GitHub, AWS Lambda, Gitlab, Ansible, Continuous Integration and Continuous Delivery (CI/CD), Confluence, CI, Artifactory
                 <!-- </p> -->
             </div>
         </div>
@@ -159,6 +162,7 @@
             <li>Traefik</li>
             <li>Jfrog</li>
             <li>Nexus</li>
+            <li>Bash/Shell Scripting</li>
             <li>OTS</li>
             <li>IBM Cloud Container Registry</li>
             <li>IBM Cloud Private</li>
@@ -201,7 +205,7 @@
             <div class="row">
                 <div class="education-block">
                     <h3><b>DevOps Certificates</b></h3>
-                    <p>
+                    <!-- <p> -->
                         <br><br>
                         <li>
                             Amazon Web Services Certified Solution Architect on 2021-10-30
@@ -283,12 +287,12 @@
                             Cognitive Practitioner from IBM on 2018-06-02
                             <a href="https://raw.githubusercontent.com/BalkrishnaBK/BalkrishnaBK.github.io/master/images/Certificates/Cognitive_Practitioner.jpg" target="_blank" rel="noopener noreferrer"> (Click here to see the certificate)</a>
                         </li>
-                    </p>
+                    <!-- </p> -->
                 </div>
 
                 <div class="education-block">
                     <h3><b>Non-DevOps Certificates</b></h3>
-                    <p>
+                    <!-- <p> -->
                         <br><br>
                         <li>
                             Java Certification from KTI
@@ -308,7 +312,7 @@
                         <li>
                             C++ Language
                         </li>
-                    </p>
+                    <!-- </p> -->
                 </div>
             </div>
         </div>
@@ -324,9 +328,9 @@
             <h3><b>Eminence & Excellence Award</b></h3>
             <span class="education-date">June 2021</span>
             <h4></h4>
-            <p>
+            <!-- <p> -->
                 Hi Balkrishna You have been leading DevOps activities very well for OB team from Iteration 0 & you playing a very critical role. You have extended working over several weekends ensuring a successful deployments for critical Testing phases. Appreciate your contributions and Keep up the good work !! 
-            </p>
+            <!-- </p> -->
         </div>
         <!-- End .honor-block -->
         
@@ -336,7 +340,7 @@
             <h4></h4>
             <p>
                 Thank you very much for your role and leadership as the DevOps expert on the Bendigo account. Your contribution is very well recognized.
-            </p>
+            <!-- </p> -->
         </div>
         <!-- End .honor-block -->
         
@@ -345,9 +349,9 @@
             <h3><b>BEN's SUPERSTAR</b></h3>
             <span class="education-date">August 2020</span>
             <h4></h4>
-            <p>
+            <!-- <p> -->
                 Balkrishna ..Your are a BEN's SUPERSTAR ... Here is a small token of appreciation for all your contribution on Bendigo... You have been leading DevOps activites for OB team from Iteration 0. During migration to Interim AWS, you played a very critical role and extended working over several weekends ensuring a successful migration. The same was often appreciated by Geo team.
-            </p>
+            <!-- </p> -->
         </div>
         <!-- End .honor-block -->
 
@@ -357,7 +361,7 @@
             <h4></h4>
             <p>
                 Thanks for all the hard work that you are doing for Aus CDS asset development. You are adding great value to the project. Keep it up.
-            </p>
+            <!-- </p> -->
         </div>
         <!-- End .honor-block -->
 
@@ -365,11 +369,11 @@
             <h3><b>Manager's Choice Award for demonstrating the following IBM Practice: Restlessly reinvent -- our company and ourselves</b></h3>
             <span class="education-date">April 2019</span>
             <h4></h4>
-            <p>
+            <!-- <p> -->
                 We really appreciate all of your hard work and effort. There is much more to achieve in the coming months and we are looking forward to very active participation from you.
 
                 You did a wonderful job!!! Keep it up.
-            </p>
+            <!-- </p> -->
         </div>
         <!-- End .honor-block -->
 
@@ -379,7 +383,7 @@
             <h4></h4>
             <p>
                 Completed 200+ learning hours and three certificates/badges
-            </p>
+            <!-- </p> -->
         </div>
         <!-- End .honor-block -->
 
@@ -387,9 +391,9 @@
             <h3><b>IBM Champion Learner Gold 2021</b></h3>
             <span class="education-date">April 2019</span>
             <h4></h4>
-            <p>
+            <!-- <p> -->
                 Completed 200+ learning hours and three certificates/badges
-            </p>
+            <!-- </p> -->
         </div>
         <!-- End .honor-block -->
 
@@ -397,7 +401,7 @@
             <h3><b>Awards and Achievements in Graduation</b></h3>
             <span class="education-date">2013-2017</span>
             <h4></h4>
-            <p>
+            <!-- <p> -->
                 <ul>
                     <li>
                         Got Mr.Academics award in Engineering, Dhole Patil Of Engineering College
@@ -411,7 +415,7 @@
                     <li>Participated into Cultural event of Kshitij 2015 ,2016 and 2017, Drama in Kshitij 2015
                         and 2016, Seed IT Idol</li>
                 </ul>
-            </p>
+            <!-- </p> -->
         </div>
         <!-- End .honor-block -->
     </div>
@@ -422,7 +426,7 @@
             <h3>Bachelor's of Engineering on Computers</h3>
             <span class="education-date">2013-2017</span>
             <h4>Savitribai Phule Pune University</h4>
-            <p>
+            <!-- <p> -->
                 Completed BE in Computer Engineering with Distinction.<br>                
                 ACADEMIC PROJECT<br>
                 Project title: Transportation Portal (BE 2016-17)<br>
@@ -431,7 +435,7 @@
                 stored in Centralized database. We are providing Web portal and Android application where in
                 Android application notification system is provided. Further in portal we are
                 implementing this by using software only so surely it will reduce coast of Project.                
-            </p>
+            <!-- </p> -->
         </div>
         <!-- End .education-block -->
 
@@ -439,9 +443,9 @@
             <h3>HSC in Science</h3>
             <span class="education-date">2012-2013</span>
             <h4>Maharashtra State Board</h4>
-            <p>
+            <!-- <p> -->
                 Completed Higher Secondary studies with First Class.
-        </p>
+        <!-- </p> -->
         </div>
         <!-- End .education-block -->
 
@@ -449,9 +453,9 @@
             <h3>SSC</h3>
             <span class="education-date">2010-2011</span>
             <h4>Maharashtra State Board</h4>
-            <p>
+            <!-- <p> -->
                 Completed Secondary studies with Distinction.
-        </p>
+        <!-- </p> -->
         </div>
     </div>
     <!-- End #education -->
@@ -464,12 +468,12 @@
             <h3>Transportation Portal</h3>
             <span class="education-date">2017</span>
             <h4></h4>
-            <p>
+            <!-- <p> -->
                 Balkrishna Londhe , Dr.Arati Dandwate , Ashwini Parab , Kajal Gavhane ,
                 Tejaswini Ingale: Transportation Portal, in: INTERNATIONAL JOURNAL OF
                 INTERDISCIPLINARY INNOVATIVE RESEARCH AND DEVELOPMENT Vol. 01, Issue
                 03, 03, Balkrishna Londhe , Dr.Arati Dandwate, 2017, ISBN/ISSN: 2456-236X
-            </p>
+            <!-- </p> -->
         </div>
         <!-- End .publications-block -->
 
@@ -477,12 +481,12 @@
             <h3>Survey on Transportation Portal</h3>
             <span class="education-date">Nov 2016</span>
             <h4></h4>
-            <p>
+            <!-- <p> -->
                 Balkrishna Londhe , Dr.Arati Dandwate , Ashwini Parab , Kajal Gavhane , Tejaswini
                 Ingale: A Survey on Transportation portal, in: International Journal of Innovative
                 Research in Computer and Communication Engineering, Balkrishna Londhe , Dr.Arati
                 Dandwate, 2016, ISBN/ISSN: 2320-9801
-            </p>
+            <!-- </p> -->
         </div>
         <!-- End .publications-block -->
     </div>
@@ -505,9 +509,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-5 copyright">
-                    <p>
+                    <!-- <p> -->
                         Copyright &copy; 2023 Balkrishna Atmaram Londhe
-                    </p>
+                    <!-- </p> -->
                 </div>
                 <div class="col-sm-2 top">
                     <span id="to-top">
