--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <div id="lead">
         <div id="lead-content">
-            <h1>Balkrishna Atmaram Londhe</h1>
+            <h1>Balkrishna Londhe</h1>
             <h2><b>DevOps Engineer</b></h2>
             <a href="images/Balkrishna_Londhe_DevOps_Engineer.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
