--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div id="lead">
         <div id="lead-content">
             <h1>Balkrishna Londhe</h1>
-            <h2><b>DevOps Engineer</b></h2>
+            <h2><b>Senior Cloud & DevOps Engineer</b></h2>
             <a href="images/Balkrishna_Londhe_DevOps_Engineer.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
@@ -79,7 +79,36 @@
                 </div>
                 <div class="col-md-8">
                     <!-- <p> -->
-                        Working as the Senior Engineer - Cloud Services and Software with certified AWS Certified Solutions Architect Associate. Holding 5+ years of experience as a DevOps Engineer with exemplary expertise in Docker, Kubernetes, AWS, Jenkins, CI/CD and Terraform. Got multiple appreciations and achieved learning of different tools and certifications as well. Worked with a team as a strategic and passionate member. Flexible professional experience in developing and building IT solutions. Hands-on experience in managing micro-Services using Docker and Kubernetes, Also infrastructure as a code using Terraform. Specialized in principles and best practices of Software Configuration Management in Agile, and Waterfall methodologies. Developed the skills to increase velocity, reliability, and quality with a high focus on security. Deep experience in background designing, testing, implementing infrastructure, and routine application maintenance tasks. Consistent team player with exemplary multitasking skills.
+                        I am a Senior DevOps and Cloud Engineer with 7+ years of hands-on experience in designing, automating, and optimizing cloud infrastructure solutions. My expertise spans AWS, Kubernetes, Docker, Terraform, Jenkins, and CI/CD pipelines, enabling me to build scalable, secure, and highly available environments.
+                        I thrive on solving complex technical challenges, enhancing cloud performance, and automating workflows to drive efficiency. With a strong foundation in Infrastructure as Code (IaC), containerization, security best practices, and cloud architecture, I help organizations streamline deployments and improve operational resilience.
+
+                        Cloud & Infrastructure Management:-
+                        Extensive experience in AWS cloud services (EC2, S3, Lambda, RDS, VPC, IAM, CloudFormation, and more).
+                        Proficient in containerization using Docker and managing Kubernetes clusters for microservices orchestration.
+                        Strong knowledge of networking, load balancing, and hybrid cloud environments to enhance system reliability.
+
+                        Infrastructure as Code (IaC) & Automation:-
+                        Expertise in Terraform to automate provisioning, scaling, and infrastructure management.
+                        Experience with CloudFormation to define and deploy AWS infrastructure in a structured manner.
+                        Skilled in Ansible and Bash/Python scripting for automation and configuration management.
+
+                        CI/CD & DevOps Pipeline Automation:-
+                        Hands-on experience with Jenkins, GitHub Actions, GitLab CI/CD, and other pipeline automation tools.
+                        Designed and implemented end-to-end CI/CD pipelines for automated builds, testing, and deployment.
+                        Experience integrating security and compliance checks into DevOps workflows.
+
+                        Monitoring, Logging & Security Best Practices:-
+                        Experience with log management and monitoring tools like Prometheus, Grafana, ELK Stack, and AWS CloudWatch.
+                        Strong understanding of IAM roles, policies, and least-privilege access controls in AWS.
+                        Implemented network security, encryption, and incident response strategies to ensure compliance with industry standards.
+                        
+                        Professional Experience & Achievements:-
+                        Worked on large-scale cloud transformation projects, optimizing infrastructure and reducing operational costs.
+                        Developed and managed Kubernetes clusters, improving microservices deployment efficiency.
+                        Automated infrastructure provisioning with Terraform, reducing deployment time and eliminating manual errors.
+                        Implemented security best practices for cloud workloads, ensuring compliance with security frameworks.
+                        Received multiple recognitions for contributions in improving CI/CD pipelines and cloud security.
+                        
                     <!-- </p> -->
                 </div>
             </div>
