--- a/index.html
+++ b/index.html
@@ -82,31 +82,31 @@
                         I am a Senior DevOps and Cloud Engineer with 7+ years of hands-on experience in designing, automating, and optimizing cloud infrastructure solutions. My expertise spans AWS, Kubernetes, Docker, Terraform, Jenkins, and CI/CD pipelines, enabling me to build scalable, secure, and highly available environments. <br>
                         I thrive on solving complex technical challenges, enhancing cloud performance, and automating workflows to drive efficiency. With a strong foundation in Infrastructure as Code (IaC), containerization, security best practices, and cloud architecture, I help organizations streamline deployments and improve operational resilience. <br>
 
-                        Cloud & Infrastructure Management:- <br>
+                        <b>Cloud & Infrastructure Management:</b>
                         <li>Extensive experience in AWS cloud services (EC2, S3, Lambda, RDS, VPC, IAM, CloudFormation, and more).</li>
                         <li>Proficient in containerization using Docker and managing Kubernetes clusters for microservices orchestration.</li>
                         <li>Strong knowledge of networking, load balancing, and hybrid cloud environments to enhance system reliability.</li>
 
                         <br>
-                        Infrastructure as Code (IaC) & Automation:-
+                        <b>Infrastructure as Code (IaC) & Automation:</b>
                         <li>Expertise in Terraform to automate provisioning, scaling, and infrastructure management.</li>
                         <li>Experience with CloudFormation to define and deploy AWS infrastructure in a structured manner.</li>
                         <li>Skilled in Ansible and Bash/Python scripting for automation and configuration management.</li>
 
                         <br>
-                        CI/CD & DevOps Pipeline Automation:-
+                        <b>CI/CD & DevOps Pipeline Automation:</b>
                         <li>Hands-on experience with Jenkins, GitHub Actions, GitLab CI/CD, and other pipeline automation tools.</li>
                         <li>Designed and implemented end-to-end CI/CD pipelines for automated builds, testing, and deployment.</li>
                         <li>Experience integrating security and compliance checks into DevOps workflows.</li>
 
                         <br>
-                        Monitoring, Logging & Security Best Practices:-
+                        <b>Monitoring, Logging & Security Best Practices:</b>
                         <li>Experience with log management and monitoring tools like Prometheus, Grafana, ELK Stack, and AWS CloudWatch.</li>
                         <li>Strong understanding of IAM roles, policies, and least-privilege access controls in AWS.</li>
                         <li>Implemented network security, encryption, and incident response strategies to ensure compliance with industry standards.</li>
 
                         <br>
-                        Professional Experience & Achievements:-
+                        <b>Professional Experience & Achievements:</b>
                         <li>Worked on large-scale cloud transformation projects, optimizing infrastructure and reducing operational costs.</li>
                         <li>Developed and managed Kubernetes clusters, improving microservices deployment efficiency.</li>
                         <li>Automated infrastructure provisioning with Terraform, reducing deployment time and eliminating manual errors.</li>
